--- a/ts & redux-saga/client/ts-redux-saga/package.json
+++ b/ts & redux-saga/client/ts-redux-saga/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
