Add Test-Action complete step

--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -13,3 +13,5 @@ jobs:
         run: echo "This is test"
       - name: sleep step
         run: sleep 3m
+      - name: eche complete status
+        run: echo "Complete"
