Modify typing error

--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -14,7 +14,7 @@ jobs:
       - name: echo base branch
         run: echo "$GITHUB_BASE_REF"
       - name: echo head branch
-        run: ehco "$GITHUB_HEAD_REF"
+        run: echo "$GITHUB_HEAD_REF"
       # - name: sleep step
       #   run: sleep 3m
       - name: echo complete status
