Add github.event.changes logic

--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -7,6 +7,7 @@ on:
     types: [opened, reopened, edited, synchronize, ready_for_review]
 jobs:
   test-action:
+    if: !github.event.changes.title && !github.event.changes.body
     runs-on: ubuntu-latest
     steps:
       - name: test echo step
