--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -7,10 +7,16 @@ on:
     types: [opened, reopened, edited, synchronize, ready_for_review]
 jobs:
   test-action:
-    # if: ${{ !(github.event.changes.title || github.event.changes.body) }}
+    if: ${{ !(github.event.changes.title || github.event.changes.body) }}
     runs-on: ubuntu-latest
     steps:
-      - uses: n1hility/cancel-previous-runs@v2
+      - name: get previous workflow status
+        uses: Mercymeilya/last-workflow-status@v0.3.2
+        id: last_status
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: cancel previous workflow
+        uses: n1hility/cancel-previous-runs@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           workflow: Test-Action.yml
@@ -25,7 +31,9 @@ jobs:
       - name: echo event.changes.base
         run: echo "${{ github.event.changes.base }}"
         if: github.event.action == 'edited' && github.event.changes.base
-      - name: sleep step
-        run: sleep 3m
+      - name: echo previous workflow status
+        run: echo "${{ steps.last_status.outputs.last_status }}"
+      # - name: sleep step
+      #   run: sleep 3m
       - name: echo complete status
         run: echo "Complete"
