--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -1,10 +1,11 @@
-name: Test-Action
+name: Test Action
 
 on:
   pull_request:
     branches:
       - main
     types: [opened, reopened, edited, synchronize, ready_for_review]
+
 jobs:
   test-action:
     if: ${{ !(github.event.changes.title || github.event.changes.body) }}
