Add upload-artifact action

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -10,3 +10,7 @@ jobs:
         uses: jakejarvis/lighthouse-action@master
         with:
           url: 'https://ostarblog.tistory.com/'
+      - uses: actions/upload-artifact@master
+        with:
+          name: report
+          path: './report'
