--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -25,6 +25,8 @@ jobs:
         run: echo "${{ github.run_id }}"
       - name: ehco github.run_number
         run: echo "${{ github.run_number }}"
+      - name: ehco github.ref
+        run: echo "${{ github.ref }}"
       # - name: sleep step
       #   run: sleep 3m
       - name: echo complete status
