--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
     types: [opened, reopened, edited, synchronize, ready_for_review]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test-action:
     if: ${{ !(github.event.changes.title || github.event.changes.body) }}
@@ -27,7 +32,7 @@ jobs:
         run: echo "${{ github.run_number }}"
       - name: ehco github.ref
         run: echo "${{ github.ref }}"
-      # - name: sleep step
-      #   run: sleep 3m
+      - name: sleep step
+        run: sleep 3m
       - name: echo complete status
         run: echo "Complete"
