--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -7,7 +7,7 @@ on:
     types: [opened, reopened, edited, synchronize, ready_for_review]
 jobs:
   test-action:
-    if: github.head_ref == 'action-test'
+    if: github.head_ref == 'develop'
     runs-on: ubuntu-latest
     steps:
       - uses: dorny/paths-filter@v2
