--- a/.github/workflows/Test-Action.yml
+++ b/.github/workflows/Test-Action.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
     types: [opened, reopened, edited, synchronize, ready_for_review]
+    paths:
+      - 'redux/**/*'
 jobs:
   test-action:
     # if: github.head_ref == 'develop'
